--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,15 @@
-// Place all the styles related to the static-pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+// Google Fonts
+@import url('https://fonts.googleapis.com/css?family=Muli:300,400,900');
+
+// Font Variables
+$font-stack: 'Muli', sans-serif; 
+
+// Styles
+body {
+  font-family: $font-stack;
+  font-weight: 300;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 900;
+}
