--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#"><span class="glyphicon glyphicon-user"></span></a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-heart"></span></a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-star"></span></a></li>
             <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -63,8 +63,8 @@
       <div class="container">
         <!-- search form -->
         <div class="row">
-          <div class="col-sm-6">
-            <h3>Find your favorite product!</h3>
+          <div class="col-sm-6 text-center">
+            <h3>Find your <span class="glyphicon glyphicon-heart"></span> product!</h3>
           </div><!-- /.col-lg-6 -->
           <div class="col-sm-6">
             <div class="input-group searchform">
