--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,91 @@
-<h1>Welcome to Bike Berlin</h1>
-<h2>Your source for used bikes in Berlin</h2>
+<section class="season-picks">
+  <div class="container">
+  <div class="row season-picks-inner">
+    <div class="col-sm-5 picks-l">
+      <a href="#">
+        <header> 
+          <h1>Must haves</h1>
+          <h2 class="subline">Best picks of the season</h2>
+        </header>
+        <%= image_tag("front/season1.jpg", class: "img-responsive ") %>
+      </a>
+    </div><!-- /.leftcol level 1-->
 
-<%= image_tag("racebike.jpg", class: "img-responsive") %>
+    <div class="col-sm-4">
+      <div class="row">
+        <div class="col-xs-6 picks-s">
+          <a href="#">
+            <header> 
+              <h6>Abstract Light <span class="picks-subline">on sale from <span class="glyphicon glyphicon-euro picks-subline"></span>135</span></h6>
+            </header>      
+            <%= image_tag("front/season2.jpg", class: "img-responsive") %>
+          </a> 
+        </div>
+        <div class="col-xs-6 picks-s">
+          <a href="#">
+            <header> 
+              <h6>Vases <span class="picks-subline">from milky way designers</span></h6>
+            </header>   
+            <%= image_tag("front/season3.jpg", class: "img-responsive") %>
+          </a>
+        </div><!-- /.col-6 level 2 -->
+      </div><!-- /.row level 2 -->
+      <div class="row">
+        <div class="col-xs-6 picks-s">
+          <a href="#">
+            <header> 
+              <h6>Colorful Sofa <span class="picks-subline">looksgood <span class="glyphicon glyphicon-euro picks-subline"></span>9935</span></h6>
+            </header>  
+            <%= image_tag("front/season4.jpg", class: "img-responsive") %>
+          </a>
+        </div>
+        <div class="col-xs-6 picks-s">
+          <a href="#">
+            <header> 
+              <h6>Wood<br><span class="picks-subline">sit on it</span></h6>
+            </header>  
+            <%= image_tag("front/season5.jpg", class: "img-responsive") %>
+          </a>
+        </div><!-- /.col-6 level 2 -->
+        <div class="col-xs-12 picks-s">
+          <a href="#">
+            <header> 
+              <h6>Table <span class="picks-subline">last order <span class="glyphicon glyphicon-euro picks-subline"></span>1135</span></h6>
+            </header> 
+            <%= image_tag("front/season6.jpg", class: "img-responsive") %>
+          </a> 
+        </div>
+      </div><!-- /.row level 2 -->
+    </div><!-- /.middlecol-level 1 -->
 
-<p>The date and time is <%= Time.now %></p>
+    <div class="col-sm-3">
+      <div class="row">
+        <div class="col-xs-12 picks-m">
+          <a href="#">
+            <header> 
+              <h5>Clean black <br><span class="picks-subline ">chair <span class="glyphicon glyphicon-euro picks-subline"></span>1135</span></h5>
+            </header> 
+            <%= image_tag("front/season7.jpg", class: "img-responsive") %>
+          </a> 
+        </div>
+        <div class="col-xs-12 picks-m">
+          <a href="#">
+            <header> 
+              <h5>Rotan Circle <br><span class="picks-subline">chair with transparancy</span></h5>
+            </header> 
+            <%= image_tag("front/season8.jpg", class: "img-responsive") %>
+          </a>      
+        </div>
+      </div>
+    </div><!-- /.rightcol-level 1 -->
+  </div><!-- /.row -->
+  </div><!-- /.container-fluid -->
+</section>
+
+<section>
+  <hr>
+</section>
+
+
+
+
