--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,5 @@
 <section class="season-picks">
-  <div class="container">
+  <div class="container-fluid">
   <div class="row season-picks-inner">
     <div class="col-sm-5 picks-l">
       <a href="#">
