--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -145,7 +145,6 @@ a:visited {
 .picks-m,
 .picks-l {
   position: relative;
-  margin-bottom: 30px;
 }
 
 
@@ -153,12 +152,10 @@ a:visited {
   .picks-m header,
   .picks-l header {
     position: absolute;
+    top: 20px;
     max-width: 50%;
   }
 
-.season-picks-inner {
-  margin: auto;
-}
 
   .season-picks-inner h1,
   .season-picks-inner h2,
@@ -166,7 +163,7 @@ a:visited {
   .season-picks-inner h6 {    
     padding: 5px;
     background-color: rgba(255,255,255, .9);
-    margin-left: -15px;
+    margin-left:-15px;
     color: $shade-color;
   }
 
@@ -190,6 +187,20 @@ a:visited {
     color: $primary-color;
   }
 
+
+.season-picks-inner img {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  margin: auto;
+}
+
+
+
+
+// .no-gutter > [class*='col-'] {
+//   padding-right:0;
+//   padding-left:0;
+// }
 
 
 
