--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,32 +1,34 @@
-<h1>about App name</h1>
-<p>
-  Your app’s title should reflect two or three of the app’s most significant – and differentiating – features. Limit the title to one hundred characters. You should also make sure that the title includes keywords. Keywords help people to find your product on the App Store or Google Play Store.
-</p>
-<h2>App description</h2>
-<ol>
-  <li>
-    The first 1-3 sentences of an app’s description should describe the main idea of your product. You can make this part more engaging by highlighting the problem that your app solves. These sentences shouldn't exceed a combined total of 225 characters.
-  </li>
-  <li>
-    Mention special achievements. Mention if your app has been featured on TechCrunch, has won an award, or if Johnny Depp is talking about it.
-  </li>
-  <li>
-    The body of the description can include 2-3 paragraphs where you describe characteristics and details.
-  </li>
-  <li>
-    List several main functions with concise descriptions.
-  </li>
-  <li>
-    Talk about “What’s new?” Inform customers about bug fixes, color changes in the side menu, or the addition of new features. This should be the final component of your app description.
-  </li>
-</ol>
+<div class="container">
+<h1>Our Story</h1>
+  <p>
+    Your app’s title should reflect two or three of the app’s most significant – and differentiating – features. Limit the title to one hundred characters. You should also make sure that the title includes keywords. Keywords help people to find your product on the App Store or Google Play Store.
+  </p>
+  <h2>How this app works</h2>
+  <ol>
+    <li>
+      The first 1-3 sentences of an app’s description should describe the main idea of your product. You can make this part more engaging by highlighting the problem that your app solves. These sentences shouldn't exceed a combined total of 225 characters.
+    </li>
+    <li>
+      Mention special achievements. Mention if your app has been featured on TechCrunch, has won an award, or if Johnny Depp is talking about it.
+    </li>
+    <li>
+      The body of the description can include 2-3 paragraphs where you describe characteristics and details.
+    </li>
+    <li>
+      List several main functions with concise descriptions.
+    </li>
+    <li>
+      Talk about “What’s new?” Inform customers about bug fixes, color changes in the side menu, or the addition of new features. This should be the final component of your app description.
+    </li>
+  </ol>
 
-<h2>App screenshots</h2>
-<p>
-  The first screenshot is the most important. It describes what your app does. If you add text to your screenshots, use verbs. Verbs push people to take action better than any other part of speech. Verbs are your friends.
-</p>
+  <h2>App screenshots</h2>
+  <p>
+    The first screenshot is the most important. It describes what your app does. If you add text to your screenshots, use verbs. Verbs push people to take action better than any other part of speech. Verbs are your friends.
+  </p>
 
-<h2>Recommendations</h2>
-<p>
-  be clear and concise when explaining how your app works and why people need it. use keywords both in the app’s name and in its description. write directly to your user (using you, as opposed to using people, or they, or users). avoid technical details and ambiguous sentences.
-</p>
+  <h2>Recommendations</h2>
+  <p>
+    be clear and concise when explaining how your app works and why people need it. use keywords both in the app’s name and in its description. write directly to your user (using you, as opposed to using people, or they, or users). avoid technical details and ambiguous sentences.
+  </p>
+</div>
