--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,5 @@
 <section class="season-picks">
-  <div class="container-fluid">
+  <div class="container">
   <div class="row season-picks-inner">
     <div class="col-sm-5 picks-l">
       <a href="#">
@@ -47,12 +47,12 @@
             <%= image_tag("front/season5.jpg", class: "img-responsive") %>
           </a>
         </div><!-- /.col-6 level 2 -->
-        <div class="col-xs-12 picks-s">
+        <div class="col-xs-12 picks-s crop">
           <a href="#">
             <header> 
               <h6>Table <span class="picks-subline">last order <span class="glyphicon glyphicon-euro picks-subline"></span>1135</span></h6>
             </header> 
-            <%= image_tag("front/season6.jpg", class: "img-responsive") %>
+            <%= image_tag("front/season6.jpg", class: "img-responsive crop-img") %>
           </a> 
         </div>
       </div><!-- /.row level 2 -->
