--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -192,7 +192,7 @@ a:visited {
     margin: auto;
   }
 
-@media (min-width: 1024px) { 
+@media (min-width: 1024px) and (max-width: 1200px)  { 
   .crop {
     height: 148px;
     overflow: hidden;
@@ -215,6 +215,19 @@ a:visited {
     width: 100%;
     height: 100%;
     margin: 0 0 -8px 0;
+  }
+}
+
+@media (min-width: 1201px) { 
+  .crop {
+    height: 179px;
+    overflow: hidden;
+  }
+
+  .crop-img {
+    width: 100%;
+    height: 100%;
+    margin: 0 0 -1px 0;
   }
 }
 
