--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,18 @@
-// Place all the styles related to the products controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+// Google Fonts
+@import url('https://fonts.googleapis.com/css?family=Muli:300,400,900');
+
+// Font Variables
+$font-stack: 'Muli', sans-serif; 
+
+//Colors
+$primary-color: rgba(255, 255, 255, 1);
+$secondary-color: rgba(175, 171, 165, 1);
+$shade-color: rgba(114, 158, 161, 1);
+$text-color: rgba(87,85,82, 1);
+$highlight-color: rgba(246, 254, 219, 1);
+$emphasis-color: rgba(172, 215, 236, 1);
+
+img {
+	width: 100%;
+    height: auto;
+}
