--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,21 +1,24 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
+  <div class="row">
+   <div class="col-sm-6">
+   <%= image_tag(@product.image_url) %>
+   </div>
+   <div class="col-sm-6">
+    <h2><%= @product.name %></h2>
 
-  <p>
-    <strong>Name:</strong>
-    <%= @product.name %>
-  </p>
+    <p>
+      <strong>Description:</strong>
+      <%= @product.description %>
+    </p>
 
-  <p>
-    <strong>Description:</strong>
-    <%= @product.description %>
-  </p>
+    <p>
+      <strong>Image url:</strong>
+      <%= @product.image_url %>
+    </p>
+  </div>
+</div>
 
-  <p>
-    <strong>Image url:</strong>
-    <%= @product.image_url %>
-  </p>
-
-  <%= link_to 'Edit', edit_product_path(@product) %> |
-  <%= link_to 'Back', products_path %>
+<%= link_to 'Edit', edit_product_path(@product) %> |
+<%= link_to 'Back', products_path %>
 </div>
