--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,79 +1,69 @@
-<section class="season-picks">
+<section class="season-prod">
   <div class="container">
-  <div class="row season-picks-inner">
-    <div class="col-sm-5 picks-l">
+  <div class="row prod-inner">
+    <div class="col-sm-6 prod-l">
       <a href="#">
         <header> 
           <h1>Must haves</h1>
           <h2 class="subline">Best picks of the season</h2>
         </header>
-        <%= image_tag("front/season1.jpg", class: "img-responsive ") %>
+        <%= image_tag("prod-xl/prod1.jpg", class: "img-responsive ") %>
       </a>
     </div><!-- /.leftcol level 1-->
 
-    <div class="col-sm-4">
+    <div class="col-sm-2">
       <div class="row">
-        <div class="col-xs-6 picks-s">
+        <div class="col-xs-12 prod-s">
           <a href="#">
             <header> 
-              <h6>Abstract Light <span class="picks-subline">on sale from <span class="glyphicon glyphicon-euro picks-subline"></span>135</span></h6>
+              <h6>Abstract Light <span class="prod-subline">on sale from <span class="glyphicon glyphicon-euro prod-subline"></span>135</span></h6>
             </header>      
-            <%= image_tag("front/season2.jpg", class: "img-responsive") %>
+            <%= image_tag("prod-s/prod2.jpg", class: "img-responsive") %>
           </a> 
         </div>
-        <div class="col-xs-6 picks-s">
+        <div class="col-xs-12 prod-s">
           <a href="#">
             <header> 
-              <h6>Vases <span class="picks-subline">from milky way designers</span></h6>
+              <h6>Vases <span class="prod-subline">from milky way designers</span></h6>
             </header>   
-            <%= image_tag("front/season3.jpg", class: "img-responsive") %>
-          </a>
-        </div><!-- /.col-6 level 2 -->
-      </div><!-- /.row level 2 -->
-      <div class="row">
-        <div class="col-xs-6 picks-s">
-          <a href="#">
-            <header> 
-              <h6>Colorful Sofa <span class="picks-subline">looksgood <span class="glyphicon glyphicon-euro picks-subline"></span>9935</span></h6>
-            </header>  
-            <%= image_tag("front/season4.jpg", class: "img-responsive") %>
+            <%= image_tag("prod-s/prod4.jpg", class: "img-responsive") %>
           </a>
         </div>
-        <div class="col-xs-6 picks-s">
+        <div class="col-xs-12 prod-s">
           <a href="#">
             <header> 
-              <h6>Wood<br><span class="picks-subline">sit on it</span></h6>
+              <h6>Wood<br><span class="prod-subline">sit on it</span></h6>
             </header>  
-            <%= image_tag("front/season5.jpg", class: "img-responsive") %>
+            <%= image_tag("prod-s/prod3.jpg", class: "img-responsive") %>
           </a>
-        </div><!-- /.col-6 level 2 -->
-        <div class="col-xs-12 picks-s crop">
-          <a href="#">
-            <header> 
-              <h6>Table <span class="picks-subline">last order <span class="glyphicon glyphicon-euro picks-subline"></span>1135</span></h6>
-            </header> 
-            <%= image_tag("front/season6.jpg", class: "img-responsive crop-img") %>
-          </a> 
-        </div>
-      </div><!-- /.row level 2 -->
+        </div><!-- /.col  -->
+      </div><!-- /.row  -->
     </div><!-- /.middlecol-level 1 -->
 
-    <div class="col-sm-3">
+    <div class="col-sm-4">
       <div class="row">
-        <div class="col-xs-12 picks-m">
+        <div class="col-xs-6 prod-s">
           <a href="#">
             <header> 
-              <h5>Clean black <br><span class="picks-subline ">chair <span class="glyphicon glyphicon-euro picks-subline"></span>1135</span></h5>
-            </header> 
-            <%= image_tag("front/season7.jpg", class: "img-responsive") %>
+              <h6>Abstract Light <span class="prod-subline">on sale from <span class="glyphicon glyphicon-euro prod-subline"></span>135</span></h6>
+            </header>  
+            <%= image_tag("prod-s/prod5.jpg", class: "img-responsive") %>
           </a> 
         </div>
-        <div class="col-xs-12 picks-m">
+        <div class="col-xs-6 prod-s">
           <a href="#">
             <header> 
-              <h5>Rotan Circle <br><span class="picks-subline">chair with transparancy</span></h5>
+              <h6>Colorful Sofa <span class="prod-subline">looksgood <span class="glyphicon glyphicon-euro prod-subline"></span>9935</span></h6>
             </header> 
-            <%= image_tag("front/season8.jpg", class: "img-responsive") %>
+            <%= image_tag("prod-s/prod6.jpg", class: "img-responsive") %>
+          </a>      
+        </div>
+        <div class="col-xs-12 prod-m">
+          <a href="#">
+            <header> 
+              <h5>Clean black <br><span class="prod-subline ">chair <span class="glyphicon glyphicon-euro prod-subline"></span>1135</span></h5>
+            </header>
+            <%= image_tag("prod-m/prod7.jpg", class: "img-responsive") %>
           </a>      
         </div>
       </div>
