--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,6 +16,12 @@
       <strong>Image url:</strong>
       <%= @product.image_url %>
     </p>
+
+    <p>
+      <strong>Price:</strong>
+      <%= @product.price %>
+    </p>
+
   </div>
 </div>
 
