--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :teaser %><br>
+    <%= form.text_area :teaser, id: :product_teaser %>
+  </div>
+
+  <div class="field">
     <%= form.label :description %><br>
     <%= form.text_area :description, id: :product_description %>
   </div>
