--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,6 +8,11 @@
     <h2><%= @product.name %></h2>
 
     <p>
+      <strong>Teaser:</strong>
+      <%= @product.teaser %>
+    </p>
+
+    <p>
       <strong>Description:</strong>
       <%= @product.description %>
     </p>
