--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,7 +9,7 @@
   
     <% @products.each do |product| %>
       <div class= "col-sm-3 prod-m">
-        <%= link_to (image_tag(product.image_url)), product %>
+        <%= link_to (image_tag(product.image_url)), product_path(product) %>
         <header>
           <h5><%= product.name %></h5>
         </header>
