--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -12,17 +12,17 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :title %>
+    <%= form.label :title %><br>
     <%= form.text_field :title, id: :article_title %>
   </div>
 
   <div class="field">
-    <%= form.label :description %>
+    <%= form.label :description %><br>
     <%= form.text_area :description, id: :article_description %>
   </div>
 
   <div class="field">
-    <%= form.label :image_url %>
+    <%= form.label :image_url %><br>
     <%= form.text_field :image_url, id: :article_image_url %>
   </div>
 
