--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,31 +1,26 @@
+<div class="container">
 <p id="notice"><%= notice %></p>
 
 <h1>Articles</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="row">
+  
     <% @articles.each do |article| %>
-      <tr>
-        <td><%= article.title %></td>
-        <td><%= article.description %></td>
-        <td><%= article.image_url %></td>
-        <td><%= link_to 'Show', article %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <div class= "col-sm-3">
+        <%= link_to (image_tag(article.image_url)), article_path(article) %>
+        <header>
+          <h5><%= article.title %></h5>
+        </header>
+        <%= link_to 'Show', article %>
+        <%= link_to 'Edit', edit_article_path(article) %>
+        <%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %>
+      </div>
     <% end %>
-  </tbody>
-</table>
+  
+  </div>
+
 
 <br>
 
 <%= link_to 'New Article', new_article_path %>
+</div>
