--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -4,6 +4,51 @@ img {
   height: auto;
 }
 
+.product {
+  position: relative;
+}
+  .product header {
+      position: absolute;
+      top: 20px;
+      max-width: 60%;
+    }
+
+  .product h1,
+  .product h2,
+  .product h5,
+  .product h6 {    
+    padding: 5px;
+    background-color: rgba(255,255,255, .9);
+    margin-left:-15px;
+    color: $shade-color;
+  }
+
+  .product h5 {
+    font-weight: 900;
+  }  
+
+  .product a:hover img {
+    opacity: .5;
+  }
+  
+  .product:hover header {
+    z-index: 2;
+  }
+
+  .product:hover h1,
+  .product:hover h2,
+  .product:hover h5,
+  .product:hover h6 {
+    background-color: $shade-color;
+    color: $primary-color;
+  }
+
+  .product img {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin: auto;
+  }
+
 
 //Form
 .field {
