--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -140,47 +140,47 @@ a:hover {
 //Page styling
 //Index
 
-.product {
+.prod {
   position: relative;
 }
 
-  .product header {
+  .prod header {
       position: absolute;
       top: 20px;
       max-width: 60%;
     }
 
-  .product h1,
-  .product h2,
-  .product h5,
-  .product h6 {    
+  .prod h1,
+  .prod h2,
+  .prod h5,
+  .prod h6 {    
     padding: 5px;
     background-color: rgba(255,255,255, .9);
     margin-left:-15px;
     color: $shade-color;
   }
 
-  .product h5 {
+  .prod h5 {
     font-weight: 900;
   }  
 
-  .product a:hover img {
+  .prod a:hover img {
     opacity: .5;
   }
   
-  .product:hover header {
+  .prod:hover header {
     z-index: 2;
   }
 
-  .product:hover h1,
-  .product:hover h2,
-  .product:hover h5,
-  .product:hover h6 {
+  .prod:hover h1,
+  .prod:hover h2,
+  .prod:hover h5,
+  .prod:hover h6 {
     background-color: $shade-color;
     color: $primary-color;
   }
 
-  .product img {
+  .prod img {
     padding-top: 15px;
     padding-bottom: 15px;
     margin: auto;
