--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,7 +8,7 @@
   <div class="row prod-inner">
   
     <% @products.each do |product| %>
-      <div class= "col-sm-3 product">
+      <div class= "col-sm-3 prod">
         <%= link_to (image_tag(product.image_url)), product_path(product) %>
         <header>
           <h5><%= product.name %></h5>
